Changelog for miniShop.

1.9.1 (**.**.2012)
=============
- [#61] Добавлено поле "Страна" в ModAddress.
- [#62] Исправлены map файлы модели. Изменен скрипт перегенерации модели gen.php.
-----
- [#61] Added fiels "country" in ModAddress.
- [#62] Fixed map files of the model. Changed script of model generation gen.php.

1.9.0 (23.08.2012)
=============
- Возможность сортировки элементов галереи перетаскиванием.
- Импорт товаров из *.csv
- Добавлен вывод родительских категорий у настройки мультикатегорий товара в админке.
- Добавлены события msOnBeforeTVUpdate и msOnTVUpdate.
- Добавлены события msOnBeforeProductUpdate и msOnProductUpdate.
- Метод getProduct теперь может возвращать массив объектов а не значений.
- Если не задано поле "img" у товара, то админка попытается вывести в таблицу первое изображение из галереи этого товара.
-----
- Ability to sort the elements of the gallery by drag-n-drop.
- Import of goods from *.csv
- Added displaying parent categories for multi-categories setting in goods manager.
- Added events msOnBeforeTVUpdate and msOnTVUpdate.
- Added events msOnBeforeProductUpdate and msOnProductUpdate.
- Method getProduct can return array of objects instead of array of values.
- If not set field "img" in the product, goods grid will tray to display first image from product gallery.

1.8.1 (17.07.2012)
=============
- Исправлена работа с процессорами личного кабинета
-----
- Fixed work with private office processors

1.8.0 (16.07.2012)
=============
- Добавлены события для плагинов. Теперь можно писать плагины, реагирующие на создание\изменение заказа и его статуса
- Добавлен плагин miniShop. Выводит меню менеджеру на фронтенде и чистит таблицы от удаленных элементов при очищении корзины ресурсов.
- Удаление товара не удаляет его свойства. Они удаляются при очистке корзины, новым плагином.
- Процессоры переделаны для работы с $modx->runProcessor
-----